--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ body {
   min-width: 200px;
   justify-items: center;
   padding: 12px 0 24px;
-  width: 300px;
+  width: 250px;
+  margin: auto;
  
   
   
@@ -116,11 +117,17 @@ body {
   justify-items: center;
 }
 
+
+
+
 @media screen and (max-width: 1100px) {
   .header__title {
+    grid-area: header;
     font-size: 2rem;
+   
   }
   .nav__container {
+    grid-area: nav;
     width: 80vw;
     min-width: 300px;
     grid-template-columns: repeat(4, 1fr);
@@ -133,5 +140,15 @@ body {
   }
   .nav__link::after, .nav__link--active::after {
     display: none;
+  }
+
+  body {
+    grid-template-areas: 
+    'header'
+    'nav'    
+    'img_card__container'
+    'footer';
+    grid-template-columns: 1fr;
+    grid-template-rows: 100px 60px 1fr 60px;
   }
 }
